<resources>
    <string name="app_name">Budget Planner</string>

    <string name="error_empty_field">Required field</string>

    <string name="error_period_name_taken">A period with this name already exists</string>
    <string name="error_category_name_taken">A category with this name already exists</string>

    <string name="error_occurred">An error has occurred</string>

    <string name="categories">Categories</string>
    <string name="periods">Periods</string>
    <string name="dashboard">Dashboard</string>
    <string name="budget">Budget</string>
    <string name="expenses_and_income">Expenses and income</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="choose_a_location">Choose a location (optional)</string>

    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="add_estimate_optional">Add estimate (optional)</string>
    <string name="format_estimate_expenses">Estimate expenses: %s</string>
    <string name="format_estimate_income">Estimate income: %s</string>

    <string name="error_something_went_wrong_title">Oops</string>
    <string name="format_error_something_went_wrong_desc">Something went wrong\n\n%s</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="format_delete_confirmation">Please confirm if you really want to delete %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="create_category">Create category</string>
    <string name="edit_category">Edit category</string>
    <string name="instruction_category_screen_create_category">Create some categories to organize your expenses and income!</string>
    <string name="instruction_period_create_edit_screen_create_category">Create some categories from the categories tab to add them to this period!\n
        You can do this after creating the period</string>
    <string name="instruction_budget_transaction_create_edit_screen_add_periodic_category">You need to add some categories to this period before creating an expense or an income</string>
    <string name="instruction_budget_screen_no_data">Once you\'ve created some categories, you can add them to this period!</string>
    <string name="instruction_budget_transactions_screen_no_data">No expenses or income for this period so far</string>

    <string name="create_period">Create period</string>
    <string name="edit_period">Edit period</string>
    <string name="instruction_create_period">Create a period to start managing your budget!</string>

    <string name="add">Add</string>

    <string name="format_value_out_of">%s / %s</string>
    <string name="categories_for_this_period">Categories for this period:</string>
    <string name="choose_categories">Choose categories</string>
    <string name="category_not_selectable">This category cannot be unselected because it already has transactions created during this period</string>
    <string name="currency_not_changeable">This currency cannot be changed because the category already has transactions created during this period</string>

    <!--use `fun Context.getAmountStringFormatted` to get a string by the suitable format-->
    <string name="format_amount_no_decimals_with_thousand_separator">%,.0f</string>
    <string name="format_amount_two_decimals_with_thousand_separator">%,.2f</string>
    <string name="format_amount_no_decimals_signed_with_thousand_separator">%+,.0f</string>
    <string name="format_amount_two_decimals_signed_with_thousand_separator">%+,.2f</string>
    <string name="format_amount_no_decimals_edit_text">%.0f</string>
    <string name="format_amount_two_decimals_edit_text">%.2f</string>
    <string name="format_amount_string_with_currency">%s %s</string>
    <string name="format_conversion_rate">%.4f</string>

    <string name="create_budget_transaction">Create expense or income</string>
    <string name="edit_budget_transaction">Edit expense or income</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="amount">amount</string>

    <string name="format_lat_lng">(%f, %f)</string>
    <string name="choose_location">Choose location</string>
    <string name="no_location_selected">No location selected</string>
    <string name="choose_location_instruction">Tap and hold on the map to choose a location</string>
    <string name="unknown_location">Unknown location</string>
    <string name="permission_required_title">Permission required</string>
    <string name="location_permission_required_description">The app needs location permissions to zoom in to your location</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="view_on_map">View on map</string>
    <string name="format_with_thousands_separator">%,d</string>
    <string name="transactions_map">Transactions map</string>
    <string name="total_expenses">Total expenses</string>
    <string name="total_income">Total income</string>
    <string name="tap_to_zoom_in">Tap to zoom in</string>

    <string name="category_estimate">Category estimate</string>
    <string name="estimate">Estimate</string>
    <string name="category_estimate_tip">This information will only be used to properly display your progress for this category.
        You\'ll still be able to create both income and expense transactions regardless of what you choose here.</string>

    <string name="format_currency_code_and_name">%s - %s</string>
    <string name="load_more">Load more</string>
    <string name="select_a_currency">Select a currency</string>
    <string name="select_main_currency_tip">Please select the currency you\'ll be using the most from the options below.</string>
    <string name="select_periodic_category_currency_tip">Please keep in mind that all transactions for this category will have to be
        made in the selected currency during this period.</string>
    <string name="select_budget_transaction_currency_tip">The result currency must be the same as the currency of the chosen category
    and therefore cannot be changed.</string>
    <string name="format_currency">Currency: %s</string>
    <string name="calculate_by_another_currency">Calculate by another currency</string>
    <string name="select_another_currency">Select another currency</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="conversion_rate">Conversion rate</string>
    <string name="convert_currency">Convert currency</string>
    <string name="format_conversion_rate_desc_from">1 %s = </string>
    <string name="format_conversion_result">Result (%s): %s</string>
    <string name="multiple_currencies_tip">*Approximate sum (multiple currencies found)</string>
    <string name="format_approximate_sum">%s*</string>
    <string name="unknown_total">Unknown total</string>

</resources>