<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.appscreens.dashboard.subscreens.periodcreateedit.PeriodCreateEditFragment">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/BudgetPlannerAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/BudgetPlannerMaterialToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextAppearance="@style/TextTitleWhiteBold16sdp"
            tools:title="@string/create_budget_transaction" />

        <include layout="@layout/layout_view_toolbar_shadow" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16sdp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_budget_transaction_tabs_background"
                app:tabBackground="@drawable/selector_budget_transaction_tabs"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_16sdp"
                app:tabRippleColor="@color/colorPurple50"
                app:tabUnboundedRipple="true"
                app:tabIndicatorColor="@null"
                app:tabTextAppearance="@style/TextDescBlack14sdp"
                app:tabSelectedTextColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/name"
                app:boxBackgroundColor="@null"
                app:errorIconDrawable="@null"
                app:errorTextAppearance="@style/TextAppearanceCairo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textAppearance="@style/TextAppearanceCairo" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textAllCaps="true"
                android:textAppearance="@style/TextTitleWhiteBold14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_name"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@string/create" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>